--- a/assets/css/templatemo-eduwell-style.css
+++ b/assets/css/templatemo-eduwell-style.css
@@ -147,8 +147,8 @@ body {
 .main-button-gradient a {
   font-size: 13px;
   color: #fff;
-  background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: rgb(180, 28, 28);
+  background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%);
   padding: 12px 30px;
   display: inline-block;
   border-radius: 5px;
@@ -158,8 +158,8 @@ body {
 }
 
 .main-button-gradient a:hover {
-  background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: rgb(180, 28, 28);
+  background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%);
   opacity: 0.9;
 }
 
@@ -226,7 +226,7 @@ section {
 
 .section-heading h4 em {
   font-style: normal;
-  color: #dc8cdb;
+  color: #8F1D1E;
 }
 
 .section-heading p {
@@ -240,8 +240,8 @@ header
 --------------------------------------------- 
 */
 .background-header {
-  background: rgb(219,138,222) !important;
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%) !important;
+  background: rgb(107, 31, 32) !important;
+  background: linear-gradient(-145deg, rgba(107, 31, 32) 0%, rgba(33, 34, 36) 100%) !important;
   height: 80px!important;
   position: fixed!important;
   top: 0!important;
@@ -399,7 +399,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #dc8cdb!important;
+  color: #8F1D1E!important;
   padding-left: 25px;
 }
 
@@ -539,7 +539,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #dc8cdb;
+  color: #8F1D1E;
 }
 
 @media (max-width: 1200px) {
@@ -558,7 +558,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #dc8cdb!important;
+    color: #8F1D1E!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -616,7 +616,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #dc8cdb!important;
+    color: #8F1D1E!important;
   }
   .header-area .main-nav .nav li.has-sub ul.sub-menu {
     position: relative;
@@ -726,7 +726,8 @@ section.main-banner {
 
 .main-banner .header-text h2 em {
   font-style: normal;
-  color: #dc8cdb;
+  color: #8F1D1E
+
 }
 
 .main-banner .main-button-gradient {
@@ -782,7 +783,7 @@ services
 }
 
 .services .owl-dots .active {
-  background-color: #dc8cdb;
+  background-color: #8F1D1E;
 }
 
 
@@ -842,7 +843,7 @@ section.our-courses .naccs .menu div {
 }
 
 section.our-courses .naccs .menu div.active {
-  color: #dc8cdb;
+  color: #8F1D1E;
   border: 3px solid rgba(219,138,222,1);
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);
 }
