--- a/assets/css/templatemo-eduwell-style.css
+++ b/assets/css/templatemo-eduwell-style.css
@@ -885,8 +885,8 @@ section.our-courses ul.nacc li .left-image img {
 
 section.our-courses ul.nacc li .left-image .price h6 {
   position: absolute;
-  background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: rgb(180, 28, 28);
+  background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%);
   color: #fff;
   top: 20px;
   left: 20px;
@@ -1052,7 +1052,7 @@ section.testimonials:after {
 .testimonials .item span {
   font-size: 13px;
   font-weight: 700;
-  color: #dc8cdb;
+  color: #8F1D1E;
 }
 
 .testimonials .item img {
@@ -1127,8 +1127,8 @@ section.contact-us .contact-info .icon i {
   text-align: center;
   line-height: 50px;
   border-radius: 50%;
-  background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: rgb(180, 28, 28);
+  background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%);
   color: #fff;
 }
 
@@ -1140,7 +1140,7 @@ section.contact-us .contact-info h4 {
 
 section.contact-us .contact-info span {
   font-size: 15px;
-  color: #dc8cdb;
+  color: #8F1D1E;
   font-weight: 700;
 }
 
@@ -1195,8 +1195,8 @@ section.contact-us #contact button {
   float: right;
   font-size: 13px;
   color: #fff;
-  background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: rgb(180, 28, 28);
+  background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%);
   padding: 12px 30px;
   display: inline-block;
   border-radius: 5px;
@@ -1396,13 +1396,13 @@ section.our-team .naccs .menu div h4 {
 section.our-team .naccs .menu div span {
   font-size: 12px;
   text-transform: uppercase;
-  color: #dc8cdb;
+  color: #8F1D1E;
   font-weight: 700;
   display: block;
 }
 
 section.our-team .naccs .menu div.active h4 {
-  color: #dc8cdb;
+  color: #8F1D1E;
 }
 
 section.our-team ul.nacc {
@@ -1468,7 +1468,7 @@ section.our-team ul.nacc li .left-content span a {
 }
 
 section.our-team ul.nacc li .left-content span a:hover {
-  color: #dc8cdb;
+  color: #8F1D1E;
 }
 
 section.our-team ul.nacc li .left-content .last-span a {
@@ -1552,8 +1552,8 @@ section.our-office #video .thumb .play-button a {
   transform: translate(-40px, -40px);
   color: #fff;
   font-size: 22px;
-  background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: rgb(180, 28, 28);
+  background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%);
 }
 
 section.our-office #video img {
@@ -1694,7 +1694,7 @@ section.more-info .count-area-content .count-digit {
   height: 80px;
   line-height: 80px;
   font-size: 28px;
-  color: #dc8cdb;
+  color: #8F1D1E;
   font-weight: 900;
   margin-bottom: -40px;
   position: relative;
@@ -1749,8 +1749,8 @@ body {
     font-size: 62px;
   }
   .header-area {
-    background: rgb(219,138,222) !important;
-    background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%) !important;
+    background: rgb(180, 28, 28) !important;
+    background: linear-gradient(-145deg, rgba(180, 28, 28) 0%, rgba(33, 34, 36) 100%) !important;
   }
   .services .owl-nav .owl-next{
     right: -70px;
@@ -1892,7 +1892,7 @@ body {
     margin: 0px 5px;
   }
   section.our-team .naccs .menu div.active img {
-    border: 3px solid #dc8cdb;
+    border: 3px solid #8F1D1E;
   }
   section.our-team .naccs .menu div h4,
   section.our-team .naccs .menu div span {
